# phd_utils

./: README.md
c_utilities/common/: README.md  getopt_long_helpers.cpp  getopt_long_helpers.h  progress_bar.cpp  progress_bar.h  string_helpers.cpp  string_helpers.h
c_utilities/hyper_calibrate/: CMakeLists.txt
c_utilities/hyper_calibrate/src/: calibration.cpp  calibration.h  calibration_io.cpp  calibration_io.h  divide_by_max.cpp  divide_by_max.h  main.cpp
c_utilities/hyper_calibrate/tests/: CMakeLists.txt  calibration_io-t.cpp
c_utilities/hyper_calibrate/utilities/: combine_spectra.sh  duplicate_spectrum.sh  spectral_data_to_calibration_info.cpp
c_utilities/hyper_compression/: CMakeLists.txt  compression.cpp  compression.h  main.cpp
c_utilities/hyper_compression/tests/: CMakeLists.txt  mnf-compression-t.cpp
c_utilities/hyper_cropper/: CMakeLists.txt  main.cpp
c_utilities/hyper_picker/: CMakeLists.txt  main.cpp  main_hyper_meaner.cpp
c_utilities/hyper_read/: CMakeLists.txt  header_reader_main.cpp  readimage.cpp  readimage.h  readimage_stdin.cpp  readimage_stdin.h
c_utilities/hyper_read/tests/: CMakeLists.txt  generate_image.hpp  generate_test_image.m  hyperspectral-stdin-accumulation.cpp  hyperspectral-stdin-no-accumulation.cpp  read_image_from_stdout.cpp  readimage-t.cpp  write_image_to_stdout.cpp
c_utilities/hyper_read/tests/data/: generate_test_image.py  test_image.hdr  test_image.img  test_image_multiline_header.hdr
c_utilities/hyper_rgb/: CMakeLists.txt  main.cpp
c_utilities/hyview/: CMakeLists.txt
c_utilities/hyview/src/: imageViewer.cpp  imageViewer.h  main.cpp
c_utilities/mnf/: CMakeLists.txt
c_utilities/mnf/include/: mnf.h
c_utilities/mnf/src/: main.cpp  main_complex.cpp  main_linebyline_simple.cpp  main_simple.cpp  mnf.cpp  mnf_private.h  mnf_statistics.cpp
c_utilities/mnf/tests/: CMakeLists.txt  mnf-t.cpp
c_utilities/mnf/utilities/: mnf_info_printer.cpp
c_utilities/spectral/: CMakeLists.txt  spectral.cpp  spectral.h
c_utilities/spectralmask/: CMakeLists.txt  LICENSE
c_utilities/spectralmask/src/: main.cpp  masking.cpp  masking.h
c_utilities/uv_acquisition/: CMakeLists.txt  README  camera_control_widget.cpp  camera_control_widget.h  histogram.cpp  histogram.h  main.cpp  main_test.cpp  uv_camera.h  windowscompile.bat
c_utilities/uv_acquisition/wingetopt/: NOTE
python_utilities/heat_transfer/: heat_transfer.py  setup.py
python_utilities/hyperread/: README.md  hyperspectral_utils.py  setup.py  test.py
python_utilities/mnf/: mnf.py  setup.py  test.py
python_utilities/photon_transport/: setup.py
python_utilities/photon_transport/photon_transport/: __init__.py  diffusion_model_solutions.py  forward_model.py  setup.py
python_utilities/photon_transport/photon_transport/fluence_rate/: analytic_fluence_rate_integrals.py  fluence_rate.py  fluence_rate_threelayers.py  irradiance.py  radiance.py
python_utilities/photon_transport/photon_transport/inverse_model/: __init__.py  derivatives.py  onelayer_direct_inverse_model.py  onelayer_inverse_model.py  simple_inverse_model.py  top_layer_inverse.py
python_utilities/photon_transport/photon_transport/model_convenience/: construct_models.py
python_utilities/photon_transport/photon_transport/opt_params/: README.md
python_utilities/procspec_utils/: procspec_utils.py  setup.py
python_utilities/pymcml/: Makefile  README.md  pymcml.py  setup.py
python_utilities/pymcml/gpumcml/: README.md  gpumcml.h  gpumcml_io.c  gpumcml_kernel.h  gpumcml_main.cu  makefile
python_utilities/pymcml/mcml/: Makefile  README.md  mcmlgo.c  mcmlio.c  mcmlmain.c
python_utilities/random_forest/: README  hyper_mask_random_forest  random_forest.py  setup.py
python_utilities/region_selector/: LICENSE  setup.py
python_utilities/region_selector/region_selector/: add_names_to_coordinate_list.py  random_forest_from_regions.py  region_selector.py
python_utilities/specim_calibrate/: README.md  setup.py  specim_calibration.py  specim_hyper_calibrate
